[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-image"
version = "0.1.0"
description = "Cross-platform image processing and screen capture MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.1",
    "pillow>=10.0.0",
    "mss>=9.0.0",
    "pyautogui>=0.9.53",
    "psutil>=6.0.0",
]

[project.scripts]
mcp-image = "mcp_image:main"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["data*", "Temp*", "Windows-MCP*"]
